--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
 		<!-- ********************* -->
 		<!-- Dependencies versions -->
 		<!-- ********************* -->
-		<org.exoplatform.kernel.version>2.3.9-GA-SNAPSHOT</org.exoplatform.kernel.version>
-		<org.exoplatform.core.version>2.4.9-GA-SNAPSHOT</org.exoplatform.core.version>
-		<org.exoplatform.ws.version>2.2.9-GA-SNAPSHOT</org.exoplatform.ws.version>
-		<org.exoplatform.jcr.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr.version>
-		<org.exoplatform.jcr-services.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr-services.version>
+		<org.exoplatform.kernel.version>2.4.0-CR1</org.exoplatform.kernel.version>
+		<org.exoplatform.core.version>2.5.0-CR1</org.exoplatform.core.version>
+		<org.exoplatform.ws.version>2.3.0-CR1</org.exoplatform.ws.version>
+		<org.exoplatform.jcr.version>1.15.0-CR1</org.exoplatform.jcr.version>
+		<org.exoplatform.jcr-services.version>1.15.0-CR1</org.exoplatform.jcr-services.version>
 		<org.exoplatform.portal.version>3.4.0.Final</org.exoplatform.portal.version>
 		<org.exoplatform.webos.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.webos.version>
 		<org.exoplatform.commons.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.commons.version>
@@ -99,7 +99,7 @@
 		<org.apache.jackrabbit.version>1.6.4</org.apache.jackrabbit.version><!-- needed for cs -->
 		<org.hsqldb.version>2.0.0</org.hsqldb.version>
 		<!-- 3rd parties for docs generation -->
-		<doc-style.version>1.0.8-SNAPSHOT</doc-style.version>
+        <doc-style.version>1.0.8-SNAPSHOT</doc-style.version>
 		<guava.version>r07</guava.version>
 		<httpcomponents.httpclient.version>4.0</httpcomponents.httpclient.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
