--- a/extension/portlets/platformNavigation/pom.xml
+++ b/extension/portlets/platformNavigation/pom.xml
@@ -77,6 +77,12 @@
       <version>${org.gatein.shindig.version}</version>
       <scope>provided</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.exoplatform.platform</groupId>
+          <artifactId>platform-component-UXPnavigation</artifactId>
+          <version>4.0.0.Alpha1-SNAPSHOT</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>platformNavigation</finalName>
