--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>org.exoplatform.platform</groupId>
     <artifactId>platform</artifactId>
-	<version>4.0.0.Alpha1-SNAPSHOT</version>
+	<version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>eXo Platform</name>
 	<description>Parent POM for platform projects.</description>
