--- a/component/UXPnavigation/pom.xml
+++ b/component/UXPnavigation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.exoplatform.platform</groupId>
         <artifactId>platform-component</artifactId>
-        <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+        <version>4.0.0.Alpha1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
