--- a/doc/introduction/pom.xml
+++ b/doc/introduction/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.platform</groupId>
       <artifactId>platform-doc</artifactId>
-    <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+    <version>4.0.0.Alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>exo.platform.doc.introduction</artifactId>
   <packaging>pom</packaging>
