--- a/extension/portlets/platformNavigation/pom.xml
+++ b/extension/portlets/platformNavigation/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.platform</groupId>
       <artifactId>platform-extension-portlets</artifactId>
-    <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+    <version>4.0.0.Alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>platform-extension-portlets-platformNavigation</artifactId>
   <packaging>war</packaging>
@@ -81,7 +81,8 @@
       <dependency>
           <groupId>org.exoplatform.platform</groupId>
           <artifactId>platform-component-UXPnavigation</artifactId>
-          <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+          <version>4.0.0.Alpha1-SNAPSHOT</version>
+ <!--         <scope>provided</scope>      -->
       </dependency>
   </dependencies>
   <build>
