--- a/packaging/trial/pom.xml
+++ b/packaging/trial/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.platform</groupId>
       <artifactId>platform-packaging</artifactId>
-    <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+    <version>4.0.0.Alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>platform-packaging-trial</artifactId>
   <packaging>pom</packaging>
