--- a/samples/acme-intranet/ear/pom.xml
+++ b/samples/acme-intranet/ear/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.platform</groupId>
       <artifactId>platform-sample-acme-intranet</artifactId>
-    <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+    <version>4.0.0.Alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>platform-sample-acme-intranet-ear</artifactId>
   <packaging>ear</packaging>
