--- a/samples/acme-intranet/portlet/pom.xml
+++ b/samples/acme-intranet/portlet/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.exoplatform.platform</groupId>
       <artifactId>platform-sample-acme-intranet</artifactId>
-    <version>4.0.0.Alpha1-help-feature-SNAPSHOT</version>
+    <version>4.0.0.Alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>platform-sample-acme-intranet-portlet</artifactId>
   <packaging>war</packaging>
