--- a/extension/portlets/platformNavigation/pom.xml
+++ b/extension/portlets/platformNavigation/pom.xml
@@ -81,8 +81,8 @@
       <dependency>
           <groupId>org.exoplatform.platform</groupId>
           <artifactId>platform-component-UXPnavigation</artifactId>
-          <version>4.0.0.Alpha1-SNAPSHOT</version>
- <!--         <scope>provided</scope>      -->
+          <version>${project.version}</version>
+         <scope>provided</scope>
       </dependency>
   </dependencies>
   <build>
