--- a/packaging/tomcat/pom.xml
+++ b/packaging/tomcat/pom.xml
@@ -130,6 +130,13 @@
       <scope>provided</scope>
       <type>js</type>
     </dependency>
+	<dependency>
+      <groupId>org.exoplatform.calendar</groupId>
+      <artifactId>calendar-Create-event</artifactId>
+      <version>${org.exoplatform.calendar.version}</version>
+      <scope>provided</scope>
+      <type>jar</type>
+    </dependency>
     <dependency>
       <groupId>org.exoplatform.calendar</groupId>
       <artifactId>calendar.packaging.product</artifactId>
