PLF-3875: Implement Upload File in the Create Portlet

--- a/extension/portlets/platformNavigation/pom.xml
+++ b/extension/portlets/platformNavigation/pom.xml
@@ -88,6 +88,11 @@
           <version>${project.version}</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.exoplatform.commons</groupId>
+          <artifactId>commons-webui-component</artifactId>
+          <version>${project.version}</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>platformNavigation</finalName>
