--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
 		<org.exoplatform.gwtframework.version>1.1.2</org.exoplatform.gwtframework.version>
 		<org.exoplatform.ide.version>1.1.8-SNAPSHOT</org.exoplatform.ide.version>
-		<org.exoplatform.calendar.version>4.0.0.Alpha1-POC-CREATEEVENT-SNAPSHOT</org.exoplatform.calendar.version>
+		<org.exoplatform.calendar.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.calendar.version>
         <org.exoplatform.forum.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.forum.version>
         <org.exoplatform.wiki.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.wiki.version>
 		<org.exoplatform.ecms.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.ecms.version>
