PLF-3942 :[Top Navigation]Sanitization

--- a/component/pom.xml
+++ b/component/pom.xml
@@ -17,6 +17,6 @@
 	<module>organization</module>
 	<module>webui</module>
 	<module>jmxclient</module>
-    <module>UXPnavigation</module>
+    <module>uxpnavigation</module>
   </modules>
 </project>
