PLF-3936 :Manage the right container of the intranet's home page

--- a/extension/portlets/homepagePortlets/pom.xml
+++ b/extension/portlets/homepagePortlets/pom.xml
@@ -10,6 +10,6 @@
   <packaging>war</packaging>
   <name>eXo Platform - HomePage Portlets </name>
   <build>
-    <finalName>homepagePortlets</finalName>
+    <finalName>homepage-portlets</finalName>
   </build>
 </project>
