--- a/extension/portlets/homepagePortlets/src/main/webapp/WEB-INF/web.xml
+++ b/extension/portlets/homepagePortlets/src/main/webapp/WEB-INF/web.xml
@@ -24,13 +24,22 @@
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
                  "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
-  <display-name>cloud-workspaces-gadgets</display-name>
+  <display-name>homepage-portlets</display-name>
   <!-- ================================================================== -->
   <!--           LISTENER                                                 -->
   <!-- ================================================================== -->
   <!--listener>
     <listener-class>org.exoplatform.container.web.PortalContainerConfigOwner</listener-class>
   </listener-->
+  <servlet>
+		<servlet-name>GateInServlet</servlet-name>
+		<servlet-class>org.gatein.wci.api.GateInServlet</servlet-class>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GateInServlet</servlet-name>
+		<url-pattern>/gateinservlet</url-pattern>
+	</servlet-mapping>
 </web-app>
 
 
