--- a/extension/portlets/homepagePortlets/src/main/webapp/WEB-INF/web.xml
+++ b/extension/portlets/homepagePortlets/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,8 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-
-    Copyright (C) 2009 eXo Platform SAS.
-
-    This is free software; you can redistribute it and/or modify it
-    under the terms of the GNU Lesser General Public License as
-    published by the Free Software Foundation; either version 2.1 of
-    the License, or (at your option) any later version.
-
-    This software is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-    Lesser General Public License for more details.
-
-    You should have received a copy of the GNU Lesser General Public
-    License along with this software; if not, write to the Free
-    Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-    02110-1301 USA, or see the FSF site: http://www.fsf.org.
-
--->
-
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-                 "http://java.sun.com/dtd/web-app_2_3.dtd">
+<!DOCTYPE web-app
+        PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
   <display-name>homepage-portlets</display-name>
   <!-- ================================================================== -->
@@ -36,10 +16,20 @@
 		<servlet-class>org.gatein.wci.api.GateInServlet</servlet-class>
 		<load-on-startup>0</load-on-startup>
 	</servlet>
+    <servlet>
+        <servlet-name>AssetServlet</servlet-name>
+        <servlet-class>juzu.impl.asset.AssetServlet</servlet-class>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AssetServlet</servlet-name>
+        <url-pattern>/assets/*</url-pattern>
+    </servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>GateInServlet</servlet-name>
 		<url-pattern>/gateinservlet</url-pattern>
 	</servlet-mapping>
+
 </web-app>
 
 
