PLF-3958 :[Top Navigation][Common]Manage artifact naming

--- a/extension/portlets/platformNavigation/pom.xml
+++ b/extension/portlets/platformNavigation/pom.xml
@@ -78,7 +78,7 @@
     </dependency>
 	 <dependency>
           <groupId>org.exoplatform.calendar</groupId>
-          <artifactId>calendar-Create-event</artifactId>
+          <artifactId>calendar-component-create</artifactId>
           <version>${org.exoplatform.calendar.version}</version>
           <scope>provided</scope>
       </dependency>
